@@ -25,6 +25,11 @@ public class HelpActions {
     }
 
     @Action
+    public void paypalSupportAction() {
+        Browser.openBrowser("https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=donations%40wordrider.net&item_name=FreeRapid&no_shipping=1&cn=Optional+comments&tax=0");
+    }
+
+    @Action
     public void help() {
         Swinger.showInformationDialog(Swinger.getResourceMap().getString("notImplementedYet"));
     }
